--- a/app/views/judging/scorecard.html.erb
+++ b/app/views/judging/scorecard.html.erb
@@ -17,8 +17,16 @@
 <div class="content-wrapper">
 <div class="container">
 
-    <div class="title"><h1><%= @participant.member.name.upcase %></h1></div>
+    <div class="title"><h1>SCORECARD FOR <%= @participant.member.name.upcase %></h1></div>
     <div class="content">
+
+        <div class="title"><h1>CHALLENGE</h1></div>
+
+        <%= link_to @challenge.name, challenge_path(@challenge) %>
+        <div><%= platform_and_technology_tag_links(@challenge) %></div>
+        <div><%= raw(@challenge.description) %></div>
+        <div><%= raw(@challenge.post_reg_info) if @challenge.post_reg_info %></div>
+
         <div class="title"><h1>SUBMITTED ASSETS</h1></div>
 
         <table class="table table-hover table-bordered">
