added license type to display

--- a/app/views/challenges/_right_side.html.erb
+++ b/app/views/challenges/_right_side.html.erb
@@ -6,4 +6,5 @@
 <%= render partial: "right_prizes", locals: {challenge: challenge} %>
 <%= render partial: "right_category_detail", locals: {challenge: challenge} %>
 <%= render partial: "right_assets", locals: {challenge: challenge} %>
+<%= render partial: "right_license", locals: {challenge: challenge} %>
 <%= render partial: "right_share" %>
