--- a/app/views/challenges/_right_assets.html.erb
+++ b/app/views/challenges/_right_assets.html.erb
@@ -1,8 +1,19 @@
 <% if challenge.assets.present? %>
-<h2>ASSETS</h2>
-<p><ul class="unstyled">
-  <% challenge.assets.each do |asset| %>
-    <li><%= link_to asset, "https://s3.amazonaws.com/#{ENV['AWS_BUCKET']}/challenges/#{params[:id]}/#{asset}", :target => '_blank' %></li>
+
+  <h2>ASSETS</h2>
+  
+  <% if challenge.show_assets?(@current_member_participant) %>
+
+    <p><ol>
+      <% challenge.assets.each do |asset| %>
+        <li><%= link_to asset, "https://s3.amazonaws.com/#{ENV['AWS_BUCKET']}/challenges/#{params[:id]}/#{asset}", :target => '_blank' %></li>
+      <% end %>
+    </ol></p>
+
+  <% else %>
+
+    <p>Only registered members have access to assets for this challenge.</p>
+
   <% end %>
-</ul></p>
+
 <% end %>
