added new license url

--- a/app/views/challenges/_right_license.html.erb
+++ b/app/views/challenges/_right_license.html.erb
@@ -4,6 +4,6 @@
 <% if challenge.license_type__r %>
   <%= link_to challenge.license_type__r.name, challenge.license_type__r.url, :target => '_blank' %> 
 <% else %>
-  <%= link_to 'CloudSpokes', 'http://www.cloudspokes.com/terms-of-service', :target => '_blank' %>
+  <%= link_to 'CloudSpokes', 'http://www.cloudspokes.com/home/cloudspokes-license', :target => '_blank' %>
 <% end %>
 License.</p>
