tweaks for pagination of past challenges

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -28,7 +28,7 @@
     </div>
 
     <div class="span5">
-    	<h1>Leaderbaord</h1>
+    	<h1>Leaderboard</h1>
 
     	<% if @community.leaderboard.empty? %><div style="padding-left:10px">No results at this time.</div><% end %>
 
