added edit challenge link

--- a/app/views/challenges/_right_admin.html.erb
+++ b/app/views/challenges/_right_admin.html.erb
@@ -5,5 +5,6 @@
 	<%= link_to 'View all submissions files', submissions_challenge_path %><br/>
 	<%= link_to 'View the scorecards', results_challenge_path %><br/>
 	<%= link_to 'Score submissions', outstanding_reviews_path %><br/>
+      <%= link_to 'Edit this Challenge', edit_admin_challenge_path %><br/>
 </p>
 <% end %>
