--- a/app/views/admin/challenges/_step3.html.erb
+++ b/app/views/admin/challenges/_step3.html.erb
@@ -9,7 +9,7 @@ that are not in the list, please include it in the Comments step and we'll see i
 
 <script>
 $(function() {
-  $('#admin_challenge_platforms').val("<%= @challenge_platforms.join(', ') %>").select2({
+  $('#admin_challenge_platforms').val("<%= @challenge_platforms %>").select2({
     initSelection: function(element, callback) {
       var data = [];
       $(element.val().split(",")).each(function () {
@@ -18,11 +18,11 @@ $(function() {
       callback(data);
     },
     multiple: true,
-    data:  <%= Platform.names.map {|name| { id: name, text: name } }.to_json.html_safe %>,
+    data:  <%= @all_platforms.map {|name| { id: name, text: name } }.to_json.html_safe %>,
     containerCssClass: "span6" // apply css that makes the dropdown taller
   })
 
-  $('#admin_challenge_technologies').val("<%= @challenge_technologies.join(', ') %>").select2({
+  $('#admin_challenge_technologies').val("<%= @challenge_technologies %>").select2({
     initSelection: function(element, callback) {
       var data = [];
       $(element.val().split(",")).each(function () {
@@ -31,7 +31,7 @@ $(function() {
       callback(data);
     },
     multiple: true,
-    data:  <%= Technology.names.map {|name| { id: name, text: name } }.to_json.html_safe %>,
+    data:  <%= @all_technologies.map {|name| { id: name, text: name } }.to_json.html_safe %>,
     containerCssClass: "span6" // apply css that makes the dropdown taller
   })   
 })
