--- a/app/views/admin/challenges/_step4.html.erb
+++ b/app/views/admin/challenges/_step4.html.erb
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-      <% @prizes.each do |prize| %>
+      <% @challenge.prizes.each do |prize| %>
         <tr>
           <td>
             <input class="jqtransformdone" type="text" name="admin_challenge[prizes][][place]" value='<%= prize.place %>' />
