--- a/app/views/admin/challenges/_step1.html.erb
+++ b/app/views/admin/challenges/_step1.html.erb
@@ -30,7 +30,7 @@
 
 <div class="control-group">
   <div class="controls">
-      <span class="help-inline">Becareful when pasting from a Word or Google doc. You may have better luck using the Paste as Plain Text or Paste from Word and then just making you changes.</span>
+      <span class="help-inline">Becareful when pasting from a Word or Google doc. You may have better luck using the Paste as Plain Text or Paste from Word and then just making your changes.</span>
   </div>
 </div>
 
