moved javascript back to html as erb is needed for opener to sfdc

--- a/app/views/admin/challenges/index.html.erb
+++ b/app/views/admin/challenges/index.html.erb
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+function openInSalesforce(id) {
+  window.open("<%= ENV['SFDC_INSTANCE_URL'] %>/"+id,"_blank");
+}
+</script>
+
 <%= csrf_meta_tag %>
 <%= content_wrapper do %>
 
