--- a/app/views/challenges/_submit_upload.html.erb
+++ b/app/views/challenges/_submit_upload.html.erb
@@ -1,6 +1,6 @@
 <% if @challenge.open? || @current_member_participant.override_submission_upload %>
 
-    <div class="title" style="margin-top:10px;margin-bottom:15px" id="uploadfiles"><h1>UPLOAD FILES</h1></div>
+    <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>UPLOAD FILES</h1></div>
     <p>Upload any deliverables for your challenge submission including zip files containing code, Word or text files containing instructions, movies, images, etc. Max size for each uploaded file is 15MB. Please do not embed any files in Word docs as we cannot access them. </p>
 
     <p>Upload your code as a separate zip file from the rest of your deliverables to ensure that it is processed correctly. Only include your code in a zip file <a href="#submit-instructions" data-toggle="modal">in this format</a>. Do not include any other documents, graphics, movies, etc. with your code.</p>
@@ -42,6 +42,7 @@
                 <a class="btn pull-right" onclick="document.getElementById('file_submit_form').submit();"><span>ADD TO SUBMISSION</span></a>
             </div>
         <% end %>  
+        <div id="uploadfiles"></div>
 
     
     <% else %>
