changes to saving scorecards with comments per question

--- a/app/views/judging/scorecard.html.erb
+++ b/app/views/judging/scorecard.html.erb
@@ -10,6 +10,7 @@
   .rating td.weight { width: 100px; font-size: 120%; padding: auto 20px; }
   .rating td.desc { width: 54%; text-align: left; }
   .rating td.options { text-align: center; width: 20%; }
+  .question-comments { width: 750px; height: 75px;}  
 </style>    
 
 <!-- CONTENT
