--- a/app/assets/javascripts/angular/templates/madison_index.html
+++ b/app/assets/javascripts/angular/templates/madison_index.html
@@ -17,6 +17,26 @@
 }
 </style>
 
+<script type="text/javascript">
+function limitText(limitField, limitNum) {
+  var hint = $('#hint');
+
+  if (limitField.value.length > 0) {
+    var remchar = limitNum - limitField.value.length
+    hint.html("Characters Remaining : "+ remchar)
+  } else {
+    hint.html("Limit " + limitNum + " characters")
+  }
+
+  if (limitField.value.length > limitNum) {
+    hint.html("Characters Remaining : 0");
+    limitField.value = limitField.value.substring(0, limitNum);
+    alert("Comments are limited to ' + limitNum + ' characters.");
+  }
+
+}
+</script>
+
 <h1>Madison Requirements Builder</h1>
 
 <label class="checkbox pull-right">
@@ -43,7 +63,8 @@
               <div ng-show="mode == 'add'">
 
                 <form ng-submit="add()">
-                    <textarea name="description" ng-model="newRequirement.description" rows="15" style="width:97%"></textarea><br/>
+                    <textarea name="description" ng-model="newRequirement.description" rows="10" style="width:97%" onKeyDown="limitText(this,255);" onKeyUp="limitText(this,255);"></textarea>
+                    <div id='hint' style='font-size:x-small'>Limit 255 characters</div><br/>
                     <button type="submit" class="btn btn-primary" data-toggle="button">Add Requirement</button>
                 </form>              
 
