added docusign and switched some links for sal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -132,11 +132,11 @@
               <div class="pull-left">
                   <h2>MAIN LINKS</h2>
                   <ul class="links">
-                      <li><%= link_to 'Home', main_app.root_path %></li>
+                      <li><%= link_to 'Overview', '/overview' %></li>
                       <li><%= link_to 'What We Do', '/what-we-do' %></li>
                       <li><%= link_to 'How It Works', '/how-it-works' %></li>
                       <li><%= link_to 'About Us', '/about' %></li>
-                      <li><%= link_to 'Blog', 'http://blog.cloudspokes.com' %></li>
+                      <li><%= link_to 'Press', '/press' %></li>
                       <li><%= link_to 'Privacy & Terms', '/privacy' %></li>
                       <li><%= link_to 'Contact Us', '/contact' %></li>
                   </ul>
@@ -148,7 +148,7 @@
                       <li><%= link_to 'Community', main_app.community_path %></li>
                       <li><%= link_to 'Challenges', main_app.challenges_path %></li>
                       <li><%= link_to 'Leaderboard', main_app.leaderboard_path %></li>
-                      <li><%= link_to 'Badges', '/badges' %></li>
+                      <li><%= link_to 'Blog', 'http://blog.cloudspokes.com' %></li>
                       <li><%= link_to 'FAQ', '/faq' %></li>
                       <li><%= link_to 'Help', '/help' %></li>
                       <li><%= link_to 'Forums', '/forums' %></li>
@@ -160,6 +160,7 @@
                   <ul class="links">
                       <li><a href="http://mesh01.cloudspokes.com">MESH01</a></li>
                       <li><a href="http://smartsheet.cloudspokes.com">Smartsheet</a></li>
+                      <li><a href="http://docusign.cloudspokes.com">Docusign</a></li>
                   </ul>
               </div>
 
