--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -44,7 +44,10 @@
                     <div class="well">
                         <div class="top">
                             <h2><%= @member.name %></h2>
-                            <span><%= @member.country %></span>
+                            <% if @member.country %><span><%= @member.country %></span><% end %>
+                        </div>
+                        <div class="middle">
+                            <% if @member.time_zone %><span><%= @member.time_zone %></span><% end %>
                         </div>
                         <div class="bottom">
                             <strong><%= number_with_delimiter(@member.total_points, :delimiter => ',') %></strong> pts<br>
@@ -158,6 +161,7 @@
 
             <div class="span4">
 
+                <% if @member.website || @member.github || @member.twitter || @member.facebook || @member.linkedin %>
                 <h2>SOCIAL</h2>
                 <div class="content">
                     <p>
@@ -178,6 +182,7 @@
                         <% end %>
                     </p>
                 </div>
+                <% end %>
 
                 <% unless @active_challenges.empty? %>
                     <h2><%= pluralize(@active_challenges.count, "ACTIVE CHALLENGE").upcase %></h2>
