--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -114,10 +114,12 @@
           </ul>
 
 
-          <form class="form-search jqTransform pull-right">
-              <input type="text" class="search-query typeahead" placeholder="Search Members or Challenges"/>
-              <a href="#" class="btn-search"></a>
-          </form>
+          <div id="globalSearch">
+            <form class="form-search jqTransform pull-right">
+                <input type="text" class="search-query typeahead" placeholder="Search Members or Challenges"/>
+                <a href="#" class="btn-search"></a>
+            </form>
+          </div>
       </div> <!-- /.container -->
   </div><!-- /.nav-wrapper -->
 
